@@ -1,8 +1,44 @@
 Changes
 MANIFEST
 Makefile.PL
+Build.PL
 README
 lib/File/Assets.pm
 t/00-load.t
 t/pod-coverage.t
 t/pod.t
+inc/Module/AutoInstall.pm
+inc/Module/Install.pm
+inc/Module/Install/AutoInstall.pm
+inc/Module/Install/Base.pm
+inc/Module/Install/Build.pm
+inc/Module/Install/Can.pm
+inc/Module/Install/Fetch.pm
+inc/Module/Install/Include.pm
+inc/Module/Install/Makefile.pm
+inc/Module/Install/Metadata.pm
+inc/Module/Install/Win32.pm
+inc/Module/Install/WriteAll.pm
+lib/File/Assets/Asset.pm
+lib/File/Assets/Filter.pm
+lib/File/Assets/Filter/Collect.pm
+lib/File/Assets/Filter/Concat.pm
+lib/File/Assets/Filter/Minifier.pm
+lib/File/Assets/Filter/Minifier/CSS.pm
+lib/File/Assets/Filter/Minifier/JS.pm
+lib/File/Assets/Filter/Minifier/JavaScript.pm
+lib/File/Assets/Filter/YUICompressor.pm
+lib/File/Assets/Util.pm
+t.template
+t/01-basic.t
+t/02-pathing.t
+t/03-output.t
+t/04-filter.t
+t/05-rank.t
+t/10-filter-Concat.t
+t/11-filter-YUICompressor.t
+t/12-filter-Minifier.t
+t/boilerplate.t
+t/lib/File/Assets/Filter/Test.pm
+t/lib/File/Assets/Filter/TestCollect.pm
+t/lib/File/Assets/Test.pm
